# forensic-catalog

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN-batch-I-catalog-expansion.md  README.md  ROADMAP.md  deny.toml  renovate.json
.claude/commands/: review-dfir-feeds.md
.github/workflows/: ci.yml  docs.yml  feed-watch.yml  release.yml
.playwright-mcp/: page-2026-04-19T07-13-17-139Z.yml
archive/plans/: 2026-05-05-tui-navigator-design.md  PLAN2-evtx-binary-constants.md  PLAN_LINUX_HEURISTICS.md
archive/sources/: catalog-directories.json  dfir-feeds.opml  feed-report.md  feed-state.json  manual-sources.json  pending-review.md  source-inventory.json  source-inventory.md
archive/windowsir/: index.json
docs/: architecture.html  browser-carving-techniques.md  browser-data-structures.md  index.md  module-sources.md
examples/: dump_lol.rs
scripts/: archive_blog.py  backfill_archives.py  check_feed_updates.py  fetch_all_sources.py  normalize_sources.py  scrape_filesec.py  scrape_lots.py
src/: abusable_sites.rs  antiforensics.rs  antiforensics_aware.rs  artifact.rs  attack.rs  attack_flow.rs  catalog.rs  commands.rs  dependencies.rs  encryption.rs  eventids.rs  evidence.rs  evtx.rs  forensicartifacts.rs  handbook.rs  journald.rs  lib.rs  lolbins.rs  mitre.rs  navigator.rs  paths.rs  pca.rs  persistence.rs  playbooks.rs  plugin.rs  ports.rs  processes.rs  profile.rs  references.rs  remote_access.rs  rootkit.rs  sigma.rs  sqlite.rs  srum.rs  stix.rs  temporal.rs  third_party.rs  toolchain.rs  version_history.rs  volatility.rs  (+1 more)
tests/: dump_lol_test.rs
(+734 files in other folders)
