[package]
name = "forensic-catalog"
version = "0.1.0"
description = "Static indicator tables for forensic analysis: suspicious ports, LOLBins, persistence paths, execution artifacts, anti-forensics indicators, and more"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/forensic-catalog"
homepage = "https://github.com/SecurityRonin/forensic-catalog"
documentation = "https://docs.rs/forensic-catalog"
keywords = ["forensics", "dfir", "security", "mitre", "artifacts"]
categories = ["science", "data-structures"]
readme = "README.md"
