[workspace]
members = [".", "crates/fcatalog"]

[package]
name = "forensic-catalog"
version = "0.1.0"
description = "Forensic artifact catalog for DFIR: UserAssist, Shimcache, Amcache, Prefetch, $MFT, ShellBags, EVTX, NTDS.dit, SAM, SRUM, LNK, Jump Lists + KAPE/Velociraptor/Sigma/MITRE cross-refs. Zero deps."
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/forensic-catalog"
homepage = "https://github.com/SecurityRonin/forensic-catalog"
documentation = "https://docs.rs/forensic-catalog"
keywords = ["forensics", "dfir", "incident-response", "mitre", "artifacts"]
categories = ["science", "data-structures"]
readme = "README.md"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
